k8s/consul/ingress-routes/consul-ui-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`consul.localhost`)
      kind: Rule
      services:
        - name: consul-branden-consul-ui
          namespace: default
          port: 80
      middlewares:
        - name: admin-auth
  tls:
    secretName: traefik-tls-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-ingress-route-http
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`consul.localhost`)
      kind: Rule
      services:
        - name: consul-branden-consul-ui
          namespace: default
          port: 80
      middlewares:
        - name: https
        - name: admin-auth
